validation,searching pending