@@ -1,7 +1,7 @@
 package com.adnan.apparelstore.apparelstore.config;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -11,52 +11,58 @@ import com.adnan.apparelstore.apparelstore.user.User;
 
 public class CustomUserDetails implements UserDetails {
 
-    private User user;
+    private String username;
+    private String password;
+    private GrantedAuthority authority;
 
     public CustomUserDetails(User user) {
         super();
-        this.user = user;
-    }
+        this.username = user.getEmail();
+        this.password = user.getPassword();
+        String role = user.getRole();
 
+        this.authority = new SimpleGrantedAuthority(role);
+    }
 
     @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-       
-        SimpleGrantedAuthority simpleGrantedAuthority = new SimpleGrantedAuthority(user.getRole());
-        return List.of(simpleGrantedAuthority);
-
-    }
+public Collection<? extends GrantedAuthority> getAuthorities() {
+    return Collections.singletonList(authority);
+}
 
     @Override
     public String getPassword() {
-       return user.getPassword();
+
+        return password;
     }
 
     @Override
     public String getUsername() {
-        return user.getEmail();
+
+        return username;
     }
 
     @Override
     public boolean isAccountNonExpired() {
-            
-            return true;    
+
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
+
         return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
+
         return true;
     }
 
     @Override
     public boolean isEnabled() {
+
         return true;
     }
-    
 
 }
